# jupyter-resource-usage

./: CONTRIBUTING.md  MANIFEST.in  install.json  pyproject.toml  setup.cfg  setup.py
binder/: environment.yml
jupyter-config/jupyter_notebook_config.d/: jupyter_resource_usage.json
jupyter-config/jupyter_server_config.d/: jupyter_resource_usage.json
jupyter-config/nbconfig/notebook.d/: jupyter_resource_usage.json
jupyter_system_usage/: __init__.py  api.py  metrics.py  prometheus.py  server_extension.py
jupyter_system_usage/labextension/: package.json
jupyter_system_usage/labextension/static/: 114.44c8a1ee442a1f49acd3.js  361.837e500340291892fee7.js  913.0f7b5038a67e805da6bc.js  remoteEntry.98d5d3ffaab0b91962db.js  third-party-licenses.json
jupyter_system_usage/tests/: test_basic.py
