[build-system]
requires = ["jupyter_packaging~=0.10", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[license]
file="LICENSE"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyter_system_usage/labextension/static/style.js"]
ensured-targets = ["jupyter_system_usage/labextension/static/style.js", "jupyter_system_usage/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]
source_dir = "packages/labextension"
build_dir = "jupyter_system_usage/labextension"

[tool.tbump.version]
current = "0.6.3"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "jupyter_system_usage/_version.py"

[[tool.tbump.file]]
src = "packages/labextension/package.json"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.0", "jlpm clean", "jlpm build:prod"]

[tool.check-manifest]
ignore = ["binder/**", "packages/**", "*.json", "*.png", "yarn.lock", ".*", "jupyter_system_usage/labextension/**", "jupyter_system_usage/static/**"]
